Added basic report (work in progress)

--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -18,6 +18,7 @@
         <a class="nav-link" routerLinkActive="active" routerLink="/main/accounts">Accounts</a>
         <a class="nav-link" routerLinkActive="active" routerLink="/main/categories">Categories</a>
         <a class="nav-link" routerLinkActive="active" routerLink="/main/transactions">Transactions</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/main/reports">Reports</a>
       </nav>
     </div>
     <div class="col-sm-9 col-md-9 col-lg-10 col-xl-10 main">
