--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,15 @@ form {
     display: inline-block;
 }
 
+chart {
+    display: block;
+}
+
+.cat-remove .octicon {
+    font-size: 12px;
+    cursor: pointer;
+}
+
 /*!* Move down content because we have a fixed navbar that is 50px tall *!*/
 /*body {*/
 /*padding-top: 50px;*/
