--- a/public/app/account/account-list.component.html
+++ b/public/app/account/account-list.component.html
@@ -1,4 +1,6 @@
 <account-relay #relay (accounts)="accounts=$event"></account-relay>
+<action-relay #action></action-relay>
+
 <div class="card">
   <div class="card-header">
     Accounts
@@ -26,6 +28,9 @@
         <td class="text-nowrap">{{a.currency}}</td>
         <td class="text-nowrap">{{a.precision}}</td>
         <td class="text-nowrap">
+          <button class="btn btn-primary btn-sm" type="button"
+                  (click)="action.relay.account.edit(a)"><span class="octicon octicon-pencil"></span>
+          </button>
           <button class="btn btn-danger btn-sm" type="button"
                   (click)="relay.removeId(a.id())"><span class="octicon octicon-x"></span>
           </button>
