--- a/public/styles.css
+++ b/public/styles.css
@@ -45,6 +45,10 @@ chart {
     padding: 0px;
 }
 
+.input-group-addon {
+    background-color: white;
+}
+
 /*!* Move down content because we have a fixed navbar that is 50px tall *!*/
 /*body {*/
 /*padding-top: 50px;*/
