--- a/public/app/account/account-list.component.html
+++ b/public/app/account/account-list.component.html
@@ -1,5 +1,7 @@
 <account-relay #relay (accounts)="accounts=$event"></account-relay>
 <action-relay #action></action-relay>
+<user-model #userModel></user-model>
+
 
 <div class="card">
   <div class="card-header">
@@ -28,11 +30,12 @@
         <td class="text-nowrap">{{a.currency}}</td>
         <td class="text-nowrap">{{a.precision}}</td>
         <td class="text-nowrap">
-          <button class="btn btn-primary btn-sm" type="button"
-                  (click)="action.relay.account.edit(a)"><span class="octicon octicon-pencil"></span>
+          <div [hidden]="true" #isOwner="var" [var]="(userModel.user|async)?.id == a.owner"></div>
+          <button class="btn btn-sm {{isOwner.var?'btn-primary':'btn-secondary disabled'}}" type="button"
+                  (click)="isOwner.var && action.relay.account.edit(a)"><span class="octicon octicon-pencil"></span>
           </button>
-          <button class="btn btn-danger btn-sm" type="button"
-                  (click)="relay.removeId(a.id())"><span class="octicon octicon-x"></span>
+          <button class="btn btn-sm {{isOwner.var?'btn-danger':'btn-secondary disabled'}}" type="button"
+                  (click)="isOwner.var && relay.removeId(a.id())"><span class="octicon octicon-x"></span>
           </button>
         </td>
       </tr>
