--- a/public/app/transaction/transaction-list.component.html
+++ b/public/app/transaction/transaction-list.component.html
@@ -112,7 +112,10 @@
           <input #cb type="checkbox" [ngModel]="selSvc.isSelected(t.id())">
         </td>
         <td class="text-nowrap" (click)="selSvc.toggle(t.id())">{{t.date | date:"yyyy-MM-dd"}}</td>
-        <td class="text-nowrap" (click)="selSvc.toggle(t.id())">{{t.description}}</td>
+        <td class="text-nowrap" (click)="selSvc.toggle(t.id())">
+          <span>{{t.description}}</span>
+          <span *ngIf="t.extra" class="octicon octicon-comment" tooltip="{{t.extra}}"></span>
+        </td>
         <td class="text-nowrap" (click)="selSvc.toggle(t.id())">
           <span class="tag tag-default">{{(t.accountId | toAccount : (accRelay.accounts|async))?.name}}</span>
         </td>
@@ -142,10 +145,10 @@
         </td>
         <td class="text-nowrap">
           <div [hidden]="true" #isOwner="var" [var]="(userModel.user|async)?.id == t.owner"></div>
-          <button class="btn btn-secondary btn-sm" type="button" [hidden]="!isOwner.var"
+          <button class="btn btn-sm {{isOwner.var?'btn-secondary':'btn-default disabled'}}" type="button"
                   (click)="isOwner.var && action.relay.transaction.edit(t)"><span class="octicon octicon-pencil"></span>
           </button>
-          <button class="btn btn-secondary btn-sm" type="button" [hidden]="!isOwner.var"
+          <button class="btn btn-sm {{isOwner.var?'btn-secondary':'btn-default disabled'}}" type="button"
                   (click)="isOwner.var && relay.removeId(t.id())"><span class="octicon octicon-x"></span>
           </button>
         </td>
