--- a/public/app/account/account-list.component.html
+++ b/public/app/account/account-list.component.html
@@ -23,18 +23,48 @@
       </thead>
       <tbody>
       <tr *ngFor="let a of accounts">
+        <td [hidden]="true" #eAcc="var" [var]="action.relay.account.edit$|async"></td>
+        <td [hidden]="true" #editing="var" [var]="eAcc.var?._id==a.id()"></td>
+
         <td class="text-nowrap">{{a.id()}}</td>
-        <td class="text-nowrap">{{a.name}}</td>
-        <td class="text-nowrap">{{a.initialBalance}}</td>
-        <td class="text-nowrap">{{a.currency}}</td>
-        <td class="text-nowrap">{{a.precision}}</td>
-        <td class="text-nowrap">
+
+        <td class="text-nowrap" [hidden]="editing.var">{{a.name}}</td>
+        <td class="text-nowrap" [hidden]="editing.var">{{a.initialBalance}}</td>
+        <td class="text-nowrap" [hidden]="editing.var">{{a.currency}}</td>
+        <td class="text-nowrap" [hidden]="editing.var">{{a.precision}}</td>
+        <td class="text-nowrap" [hidden]="editing.var">
           <div [hidden]="true" #isOwner="var" [var]="(userModel.user|async)?.id == a.owner"></div>
           <button class="btn btn-sm {{isOwner.var?'btn-primary':'btn-secondary disabled'}}" type="button"
                   (click)="isOwner.var && action.relay.account.edit(a)"><span class="octicon octicon-pencil"></span>
           </button>
           <button class="btn btn-sm {{isOwner.var?'btn-danger':'btn-secondary disabled'}}" type="button"
                   (click)="isOwner.var && relay.removeId(a.id())"><span class="octicon octicon-x"></span>
+          </button>
+        </td>
+
+        <td class="text-nowrap" *ngIf="editing.var">
+          <input type="text" class="form-control form-control-sm" name="name"
+                 [(ngModel)]="eAcc.var.name" (keyup.enter)="relay.update(eAcc.var)">
+        </td>
+        <td class="text-nowrap" *ngIf="editing.var">
+          <input type="text" class="form-control form-control-sm" size="10" name="inBal"
+                 [(ngModel)]="eAcc.var.initialBalance" (keyup.enter)="relay.update(eAcc.var)">
+        </td>
+        <td class="text-nowrap" *ngIf="editing.var">
+          <input type="text" class="form-control form-control-sm" size="5" name="ccy"
+                 [(ngModel)]="eAcc.var.currency" (keyup.enter)="relay.update(eAcc.var)">
+        </td>
+        <td class="text-nowrap" *ngIf="editing.var">
+          <input type="text" class="form-control form-control-sm" size="6" name="decimal"
+                 [(ngModel)]="eAcc.var.precision" (keyup.enter)="relay.update(eAcc.var)">
+        </td>
+        <td class="text-nowrap" *ngIf="editing.var">
+          <div [hidden]="true" #isOwner="var" [var]="(userModel.user|async)?.id == a.owner"></div>
+          <button class="btn btn-sm btn-primary" type="button"
+                  (click)="relay.update(eAcc.var)"><span class="octicon octicon-check"></span>
+          </button>
+          <button class="btn btn-sm btn-secondary" type="button"
+                  (click)="action.relay.account.stopEdit()"><span class="octicon octicon-history"></span>
           </button>
         </td>
       </tr>
