--- a/public/app/transaction/transaction-list.component.html
+++ b/public/app/transaction/transaction-list.component.html
@@ -2,6 +2,7 @@
                    (transactions)="transactions=$event"
                    [filter]="filter"></transaction-relay>
 <account-relay #accRelay></account-relay>
+<category-relay #catRelay></category-relay>
 <action-relay #mainAction></action-relay>
 <user-model #userModel></user-model>
 
@@ -138,10 +139,16 @@
                  (keyup.enter)="(relay.update(eTnx.var)||true) && mainAction.relay.transaction.stopEdit()">
         </td>
         <td class="text-nowrap" *ngIf="editing.var" class="form-inline">
-          <input type="text" class="form-control form-control-sm" name="accId" size="3"
-                 [(ngModel)]="eTnx.var.accountId"
-                 (keyup.enter)="(relay.update(eTnx.var)||true) && mainAction.relay.transaction.stopEdit()">
-          <span class="tag tag-default">{{(eTnx.var.accountId | toAccount : (accRelay.accounts|async))?.name}}</span>
+          <div [hidden]="true" #lAccStr="var"
+               [var]="(eTnx.var.accountId | toAccount : (accRelay.accounts|async))?.name"></div>
+          <ng2-completer inputClass="form-control form-control-sm"
+                         [(ngModel)]="lAccStr.var" [dataService]="accDataService$|async"
+                         [minSearchLength]="0"
+                         (selected)="eTnx.var.accountId=$event?.originalObject?.id()"></ng2-completer>
+          <!--<input type="text" class="form-control form-control-sm" name="accId" size="3"-->
+          <!--[(ngModel)]="eTnx.var.accountId"-->
+          <!--(keyup.enter)="(relay.update(eTnx.var)||true) && mainAction.relay.transaction.stopEdit()">-->
+          <!--<span class="tag tag-default">{{(eTnx.var.accountId | toAccount : (accRelay.accounts|async))?.name}}</span>-->
         </td>
         <td class="text-nowrap" *ngIf="editing.var">
           <input type="text" class="form-control form-control-sm" name="amount"
@@ -149,7 +156,7 @@
                  (keyup.enter)="(relay.update(eTnx.var)||true) && mainAction.relay.transaction.stopEdit()">
         </td>
 
-        <td class="">
+        <td>
           <div [hidden]="true" #addCatVisible="var" [var]="false"></div>
           <span class="tag tag-info tag-pill" [hidden]="addCatVisible.var || !editing.var"
                 (click)="addCatVisible.var=!addCatVisible.var">
@@ -160,14 +167,14 @@
           <span *ngIf="addCatVisible.var">
              <div [hidden]="true" #lCatStr="var" [var]="''"></div>
              <ng2-completer auto-shrink auto-focus
-                            inputClass="form-control-sm"
+                            inputClass="form-control form-control-sm"
                             [(ngModel)]="lCatStr.var" [dataService]="catDataService$|async"
                             [minSearchLength]="0" [clearSelected]="true"
                             (selected)="addCategoryInline(eTnx.var,$event)"
                             (blur)="addCatVisible.var=!addCatVisible.var"></ng2-completer>
           </span>
           <span [hidden]="!editing.var"
-                *ngFor="let c of eTnx.var?.categories|categoryName:categories"
+                *ngFor="let c of eTnx.var?.categories|categoryName:(catRelay.categories|async)"
                 class="tag tag-info tag-pill">
             <span>{{c.shortName}}</span><span>&nbsp;</span>
             <a class="clickable" [hidden]="!editing.var"
@@ -175,7 +182,7 @@
                 class="octicon octicon-x"></span></a>
           </span>
           <span [hidden]="editing.var"
-                *ngFor="let c of t.categories|categoryName:categories"
+                *ngFor="let c of t.categories|categoryName:(catRelay.categories|async)"
                 class="tag tag-info tag-pill">{{c.shortName}}</span>
         </td>
 
